<resources>
    <string name="app_name">Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_exit">Tap back button again to exit app</string>
    <string name="library">Library</string>

    <!-- Parse -->
    <string name="parse_app_id">14hFx7nOtE3bywElLLAqy5YcBqB26UOlfIqegMAw</string>
    <string name="parse_client_key">EtubSvydNR8Cog61DfnXUy9f52Ox0MAqVSt9kcNX</string>

    <!--login-->
    <string name="header_sign_up">This\'ll be quick</string>
    <string name="header_log_in">First Things First</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create An Account</string>
    <string name="log_in">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">I have an Account</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="sign_up_success">Sign up success, let\'s login</string>
    <string name="email_empty">Email or Password is empty</string>
    <string name="repassword_error">Confirm password is incorrect</string>


    <!--fragment_home -->
    <string name="home">Home</string>
    <string name="check_out">Check Out</string>
    <string name="check_in">Check In</string>

    <!--fragment_book_detail -->
    <string name="copy_loaned_to">Copy loaned to:</string>
    <string name="edit_book">Edit Book</string>
    <string name="remove_book">Remove Book</string>
    <!--fragment_books -->
    <string name="books">Books</string>
    <string name="add">Add</string>

    <string name="all_books">All Books</string>
    <string name="available">Available</string>
    <string name="checked_out">Checked Out</string>

    <string name="add_photo">Add Photo</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="book_isbn">Book ISBN</string>
    <string name="add_book">Add Book</string>
    <!--fragment_students -->
    <string name="students">Students</string>
    <string name="btn_add">Add</string>
    <string name="add_student">Add Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="save_student">Save Student</string>
    <string name="remove_student">Remove Student</string>
    <string name="student_name">Student name</string>
    <string name="confirm_delete_student_title">Delete student</string>
    <string name="confirm_delete_student_message">Are you sure delete this student?</string>

    <!-- fragment_add_student -->

    <!--fragment_settings -->
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>

    <string name="upgrade_account">Update Account</string>
    <string name="help_me">Help Me</string>
    <string name="logout">Log Out</string>

</resources>
