<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_layout_margin"
                android:layout_marginRight="@dimen/main_layout_margin"
                android:layout_marginTop="@dimen/main_layout_margin"
                android:orientation="vertical"
    >

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmail"
        android:hint="@string/current_password"/>

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCurrentPassword"
        android:hint="@string/new_password"/>

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNewPassword"
        android:layout_marginBottom="@dimen/margin_lv_2"
        android:hint="@string/new_re_password"/>

    <Button
        android:id="@+id/btnUpgrade"
        android:layout_width="@dimen/btn_width_1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtConfirmNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_lv_1"
        android:background="@drawable/button_not_fill_green"
        android:text="@string/upgrade_account"
        android:textColor="@color/green"/>

    <Button
        android:id="@+id/btnHelpMe"
        android:layout_width="@dimen/btn_width_1"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpgrade"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_lv_1"
        android:background="@drawable/button_not_fill_green"
        android:text="@string/help_me"
        android:textColor="@color/green"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/btn_width_1"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnHelpMe"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_lv_2"
        android:background="@drawable/button_not_fill_red"
        android:text="@string/logout"
        android:textColor="@color/red"/>


</RelativeLayout>