<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/action_bar_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/edt_margin_horizontal"
            android:layout_marginTop="@dimen/edt_margin_horizontal"
            android:text="@string/header_log_in"
            android:textSize="@dimen/activity_login_tv_header_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_marginBottom="20dp"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="@dimen/fragment_home_btn_checkout_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn_common_background_fill_green"
            android:text="@string/sign_in"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="@dimen/fragment_home_btn_checkout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_btn_common_background_no_fill_green"
            android:text="@string/have_account"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_create_account"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:textColor="@color/green"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>